corrected alignment sing up block and footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1001,6 +1001,5 @@ footer {
     font-size: 12px;
     line-height: 14px;
     margin: 0 auto;
-    padding-left: 70px;
   }
 }
